[package]
name = "plugit"
version = "0.1.0"
edition = "2021"

[lib]
name = "plugit_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
goblin = "0.5"
reflink = "0.1.3"
serde = "1.0"
clap-cargo = "0.8"
cargo_toml = "0.11"
